# lazyjira

./: CONTRIBUTING.md  Makefile  README.md
cli/: Cargo.toml  jira.sh
cli/src/: main.rs
tui/: Cargo.toml
tui/src/: cache.rs  config.rs  constants.rs  jira.rs  main.rs  state.rs
tui/src/data/: issues.rs
tui/src/layout/: mod.rs
tui/src/layout/bottom/: mod.rs
tui/src/layout/left/: mod.rs
tui/src/layout/right/: mod.rs
tui/src/layout/top/: mod.rs
tui/src/model/: issue.rs
tui/src/ui/: create_form.rs  help.rs  markdown.rs  mod.rs  transition_modal.rs
