[package]
name = "lazyjira-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
tokio = "1.51.1"
color-eyre = "0.6.3"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
urlencoding = "2.1.3"
pulldown-cmark = "0.13.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
